[gd_scene load_steps=10 format=3 uid="uid://beveh35ahb7r8"]

[ext_resource type="Texture2D" uid="uid://c0o0gnw5mjvtf" path="res://scenes/Objects/Sprites/AutomaticDoor.png" id="1_1yh5c"]
[ext_resource type="Script" path="res://scenes/Objects/automatic_door.gd" id="1_j6tmk"]
[ext_resource type="AudioStream" uid="uid://gfrfxmqkyc6c" path="res://audio/door.wav" id="3_rqa7c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ossrj"]
atlas = ExtResource("1_1yh5c")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q30ce"]
atlas = ExtResource("1_1yh5c")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch3up"]
atlas = ExtResource("1_1yh5c")
region = Rect2(0, 64, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nwknn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ossrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q30ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch3up")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wf8q2"]
size = Vector2(64, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mudsl"]
size = Vector2(64, 32)

[node name="AutomaticDoor" type="StaticBody2D"]
script = ExtResource("1_j6tmk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nwknn")
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D_closed" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_wf8q2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mudsl")

[node name="DoorAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rqa7c")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered_in_sensor"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited_the_sensor"]
